--- a/client/src/components/App/Main/Main.css
+++ b/client/src/components/App/Main/Main.css
@@ -1,3 +1,9 @@
+.main {
+    background-color:#f5f5f5;
+    padding: 20px 10px;
+    border-bottom: 1px solid #DDDDDD;
+    overflow-x: hidden;
+}
 .section {
     margin-bottom: 20px;    
 }
