--- a/client/src/components/App/Main/Home/Home.css
+++ b/client/src/components/App/Main/Home/Home.css
@@ -1,14 +1,13 @@
 header.masthead {
     position: relative;
     width: 100%;
+    height: 100%;
+    min-height: 400px;
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(/assets/img/header.jpg);
+    background-image: url(/assets/img/daviduniform.jpg);
     background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
 }
     @media (min-width: 768px) {
@@ -33,6 +32,9 @@ header.masthead .header-content {
             transform: translateY(-50%);
         }
     }
+.header-content-inner {
+    text-shadow: 2px 2px 2px #000;
+}
 .main {
     font-size:18px;
 }
